# fractal-art

./: README.md  pyproject.toml
src/fractal_art/: __init__.py  cli.py  generator.py
src/fractal_art.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_generator.py
